plugins/ZipPreview/src/styles.css
.zp-wrap {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.zp-content {
    padding: 16px;
    padding-bottom: 10px;
    display: flex;
    align-items: center;
}

.zp-dropdown-expander {
    width: 100%;
    display: flex;
    height: 16px;
    align-items: center;
    justify-content: center;
    border-top: 2px solid var(--border-subtle);
    cursor: pointer;
}

.zp-dropdown-expander svg {
    width: 16px;
    height: 16px;
    color: var(--text-link);   
}

.zp-zip-preview {
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.3s ease;
    color: var(--text-default);
    padding-left: 16px;
}

.zp-zip-preview.expanded {
    max-height: 500px;
    overflow-y: auto;
    padding-bottom: 10px;
}

.zp-entry {
    color: var(--text-link);
    text-decoration: underline;
    padding-bottom: 2px;
    cursor: pointer;
}

.zp-filesize {
    color: var(--text-default);
    text-decoration: none;
    font-size: small;
    padding-left: 5px;
}

.zp-path {
    color: var(--text-default);
    padding-bottom: 2px;
    display: flex;
    align-items: center;
    gap: 8px;
}

.zp-folderReturn {
    cursor: pointer;
}

.zp-folderReturn svg {
    color: var(--text-default);
    width: 20px;
    height: 20px;
}

.zp-preview {
    min-width: 30vw;
    min-height: 20vh;
}

.zp-preview pre {
    white-space: pre-wrap;
}

.zp-preview audio {
    width: 100%;
}

.zp-preview img, .zp-preview video {
    max-width: 50vw;
    max-height: 50vh;
}

.zp-preview-override {
    margin: 10px;
    padding: 3px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 5px;
    background-color: red;
    color: white;
    font-weight: bold;
    text-align: center;
}

